# Boston-pulse

./: .env.demo.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  311.ipynb  Food Inspection.ipynb  Makefile  README.md  index.html  package-lock.json  package.json  setup.cfg
data-pipeline/: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  airflow.cfg  airflow.db  dvc.yaml  fix_imports.py  pyproject.toml  register_schemas_fix.py  requirements.txt
data-pipeline/C:\Users\sweth\Boston-pulse\data-pipeline/logs/scheduler/: latest
data-pipeline/configs/: alerting.yaml
data-pipeline/configs/datasets/: berdo.yaml  city_property.yaml  cityscore.yaml  crime.yaml  crime_navigate.yaml  fire.yaml  food_inspections.yaml  hospitals.yaml  service_311.yaml  snow_routes.yaml  street_sweeping.yaml  vision_zero.yaml
data-pipeline/configs/environments/: base.yaml  dev.yaml  local.yaml  prod.yaml
data-pipeline/configs/validation/: fairness.yaml  thresholds.yaml
data-pipeline/dags/: README.md  crime_data_pipeline_dag.py  fire_incidents_pipeline_dag.py  police_stations_pipeline_dag.py
data-pipeline/dags/aggregation/: __init__.py
data-pipeline/dags/datasets/: 311_dag.py  __init__.py  berdo_dag.py  city_property_dag.py  cityscore_dag.py  crime_dag.py  crime_navigate_dag.py  fire_dag.py  food_inspections_dag.py  hospitals_dag.py  snow_routes_dag.py  street_sweeping_dag.py  vision_zero_dag.py
data-pipeline/dags/maintenance/: __init__.py
data-pipeline/dags/monitoring/: __init__.py  ml_drift_monitoring_dag.py
data-pipeline/dags/utils/: __init__.py  alerting.py  callbacks.py  gcs_io.py  lineage_utils.py  watermark.py
data-pipeline/data/processed/: .gitignore  bias_report.txt  crime_data_clean.csv.dvc  fire_bias_report.txt  police_stations_clean.csv  stations_bias_report.txt
data-pipeline/data/raw/: .gitignore  crime_data.csv.dvc  police_stations.csv
data-pipeline/docker/: airflow.Dockerfile  docker-compose.airflow.yml
data-pipeline/logs/scheduler/: latest
data-pipeline/schemas/: README.md
data-pipeline/schemas/berdo/: features_schema.json  processed_schema.json  raw_schema.json
data-pipeline/schemas/city_property/: features_schema.json  processed_schema.json  raw_schema.json
data-pipeline/schemas/cityscore/: features_schema.json  processed_schema.json  raw_schema.json
data-pipeline/schemas/crime/: features_schema.json  processed_schema.json  raw_schema.json
data-pipeline/schemas/crime_navigate/: features_schema.json  processed_schema.json  raw_schema.json
data-pipeline/schemas/fire/: fire_schema.json  processed_schema.json  raw_schema.json
data-pipeline/schemas/food_inspections/: features_schema.json  processed_schema.json  raw_schema.json
data-pipeline/schemas/hospitals/: features_schema.json  processed_schema.json  raw_schema.json
data-pipeline/schemas/service_311/: features_schema.json  processed_schema.json  raw_schema.json
data-pipeline/schemas/snow_routes/: features_schema.json  processed_schema.json  raw_schema.json
data-pipeline/schemas/street_sweeping/: features_schema.json  processed_schema.json  raw_schema.json
data-pipeline/schemas/vision_zero/: features_schema.json  processed_schema.json  raw_schema.json
data-pipeline/scripts/: bias_detection.py  bias_detection_fire.py  bias_detection_stations.py  ingest_crime.py  ingest_fire.py  ingest_stations.py  preprocess_crime.py  preprocess_fire.py  preprocess_stations.py
data-pipeline/src/alerting/: __init__.py  alert_manager.py
data-pipeline/src/bias/: __init__.py  bias_mitigator.py  data_slicer.py  fairness_checker.py  model_card_generator.py
data-pipeline/src/datasets/base/: __init__.py  feature_builder.py  ingester.py  preprocessor.py
data-pipeline/src/datasets/berdo/: features.py  ingest.py  preprocess.py
data-pipeline/src/datasets/city_property/: features.py  ingest.py  preprocess.py
data-pipeline/src/datasets/cityscore/: __init__.py  anomaly_detector.py  features.py  ingest.py  preprocess.py
data-pipeline/src/datasets/crime/: README.md  __init__.py  anomaly_detector.py  features.py  ingest.py  preprocess.py  test_api.py
data-pipeline/src/datasets/crime_navigate/: __init__.py  features.py  ingest.py  preprocess.py
data-pipeline/src/datasets/fire/: __init__.py  bias_detection.py  features.py  ingest.py  ingester.py  preprocess.py  preprocessor.py
data-pipeline/src/datasets/food_inspections/: __init__.py  anomaly_detector.py  features.py  ingest.py  preprocess.py
data-pipeline/src/datasets/hospitals/: features.py  ingest.py  preprocess.py
data-pipeline/src/datasets/service_311/: __init__.py  anomaly_detector.py  features.py  ingest.py  preprocess.py
data-pipeline/src/datasets/snow_routes/: features.py  ingest.py  preprocess.py
data-pipeline/src/datasets/street_sweeping/: anomaly_detector.py  features.py  ingest.py  preprocess.py
data-pipeline/src/shared/: __init__.py  config.py  lineage.py
data-pipeline/src/utils/: gcs_io.py
data-pipeline/src/validation/: __init__.py  anomaly_detector.py  anomaly_registry.py  drift_detector.py  schema_enforcer.py  schema_registry.py  statistics_generator.py
data-pipeline/tests/: conftest.py  test_fire_pipeline.py  test_ingest_crime.py  test_preprocess_crime.py  test_stations_pipeline.py
ml/: Makefile  README.md  cloudbuild.yaml  pyproject.toml
ml/configs/: crime_navigate_train.yaml
ml/dags/: __init__.py  crime_navigate_train_dag.py  crime_navigate_train_dag_legacy.py  crime_navigate_train_vnext_dag.py
ml/docker/: ml-training.Dockerfile
ml/models/: __init__.py
ml/models/crime_navigate/: __init__.py  bias_checker.py  cli.py  feature_loader.py  publisher.py  scorer.py  target_builder.py  trainer.py  tuner.py  validator.py
ml/scripts/: backfill_baseline.py
ml/shared/: __init__.py  alerting.py  artifact_registry.py  baseline_snapshotter.py  bias_utils.py  config_loader.py  gcs_loader.py  mlflow_utils.py  registry.py  schemas.py  vertex_runner.py
ml/tests/: __init__.py  conftest.py
ml/tests/integration/: __init__.py
ml/tests/unit/: __init__.py
ml/tests/unit/shared/: __init__.py  (+11 more)
(+152 files in other folders)
