[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline"
version = "0.1.0"
description = "Data pipeline for Boston Pulse urban analytics platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Boston Pulse Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

# -----------------------------------------------------------------------------
# Core Dependencies
# -----------------------------------------------------------------------------
dependencies = [
    # Data Processing
    "pandas",
    "numpy",
    "pyarrow",
    "scipy",

    # Configuration & Validation
    "pydantic",
    "pydantic-settings",
    "pyyaml",

    # HTTP & APIs
    "requests",
    "httpx",
    "tenacity",

    # Google Cloud
    "google-cloud-storage",
    "google-cloud-firestore",

    # Data Validation
    "great-expectations>=0.18.0",
    "evidently>=0.4.0",

    # Geospatial
    "geopandas",
    "shapely",

    # Utilities
    "python-dotenv",
    "structlog",
    "rich",
]

# -----------------------------------------------------------------------------
# Optional Dependencies
# -----------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-timeout",
    "hypothesis",
    "faker",

    # Linting & Formatting
    "ruff",
    "black",
    "mypy",

    # Type stubs
    "types-requests",
    "types-PyYAML",
    "pandas-stubs",

    # Development utilities
    "ipython",
    "pre-commit",
]

streaming = [
    "apache-beam[gcp]",
]

# -----------------------------------------------------------------------------
# Package Discovery
# -----------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dags*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

# -----------------------------------------------------------------------------
# Ruff Configuration (Linting)
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument (common in base classes)
    "SIM102", # nested if statements (sometimes clearer)
    "SIM108", # ternary operator (sometimes clearer without)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "S101"]
"dags/**/*.py" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# -----------------------------------------------------------------------------
# Black Configuration (Formatting)
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | venv
    | build
    | dist
    | airflow_home
)/
'''

# -----------------------------------------------------------------------------
# MyPy Configuration (Type Checking)
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "airflow.*",
    "great_expectations.*",
    "evidently.*",
    "apache_beam.*",
]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest Configuration
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "slow: Slow tests (skip with -m 'not slow')",
    "schema: Schema validation tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# -----------------------------------------------------------------------------
# Coverage Configuration
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
